# crate-project

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CURRENT_STATE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/: README.md  cli.py  config.py  database.py  main.py
backend/api/: README.md  crates.py  search.py  tracks.py
backend/crates/: README.md
backend/importer/: README.md  acoustid.py  cover_art.py  discogs.py  essentia_analysis.py  itunes.py  pipeline.py  tags.py
backend/tests/: README.md  conftest.py  test_api_tracks.py  test_config.py  test_database.py
backend/tests/test_importer/: test_acoustid.py  test_cover_art.py  test_discogs.py  test_essentia_analysis.py  test_import_library.py  test_itunes.py  test_pipeline_db.py  test_pipeline_merge.py  test_pipeline_skip.py  test_tags.py
docs/: README.md
docs/research/: acoustid.md  cover_art.md  discogs.md  essentia.md  itunes.md  mutagen.md  research-database-schema.md
evals/: README.md
frontend/: .prettierrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/views/: Crates.jsx  Library.jsx  SetPlanner.jsx
md/: README.md  new-machine-setup.md
md/plans/: acoustid-lookup.md  plan-cover-art-fetcher.md  plan-database-schema.md  plan-discogs-importer.md  plan-essentia-extractor.md  plan-import-library.md  plan-itunes-importer.md  plan-mutagen-importer.md  plan-pipeline.md
md/prompts/: prompt-plan-database-schema.md  prompt-plan-discogs-importer.md  prompt-plan-essentia-extractor.md  prompt-plan-import-library.md  prompt-plan-itunes-importer.md  prompt-plan-mutagen-importer.md  prompt-plan-pipeline.md  prompt-research-database-schema.md  prompt-research-discogs.md  prompt-research-essentia.md  prompt-research-itunes.md  prompt-research-mutagen.md  prompt-research-pipeline.md
md/research/: research-cover-art-archive.md  research-discogs.md  research-mutagen.md  research-pipeline.md
md/tasks/: plan-essentia-extractor.md  research-acoustid.md
poc/: index.html  server.py
prompts/: README.md  crate_fill_v1.txt  next_track_v1.txt
scripts/: README.md  _tmp_ml_test.py  acoustid_batch_results.txt  import_library.py  itunes_batch_results.json  run_acoustid.py  run_cover_art.py  run_discogs.py  run_essentia.py  run_mutagen.py  test_importers.py  test_itunes_batch.py  test_pipeline.py
scripts/output/: importers_test_20260405T180803.json  importers_test_20260405T181037.json  importers_test_20260405T181522.json
tasks/: plan-repo-setup.md
