[project]
name = "crate"
version = "0.1.0"
description = "A smart music library application for DJs"
requires-python = ">=3.11"

# ---------------------------------------------------------------------------
# Runtime dependencies — installed with: uv sync
# These are packages the application needs to run.
# ---------------------------------------------------------------------------
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",          # async HTTP client (used by FastAPI test client too)
    "musicbrainzngs>=0.7.1",
    "pyacoustid>=1.3.0",
    "mutagen>=1.47.0",
    "anthropic>=0.28.0",
    "sentence-transformers>=3.0.0",
]

# ---------------------------------------------------------------------------
# Optional dependency groups — installed with: uv sync --extra <group>
#
# Why optional groups?
# Some dependencies are large or hard to install (Essentia requires system
# libraries and takes minutes to compile on some platforms). Making them
# optional means CI can skip them, and a developer without Essentia can still
# run the basic server and tests.
# ---------------------------------------------------------------------------
[project.optional-dependencies]

# Heavy audio analysis — Essentia requires native libraries.
# Install with: uv sync --extra analysis
# Not installed in CI — see .github/workflows/ci.yml for why.
analysis = [
    "essentia>=2.1b6.dev1110",
]

# Development tools — linters, formatters, test framework.
# Install with: uv sync --extra dev
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",           # needed for TestClient
    "ruff>=0.4.0",
    "pyright>=1.1.360",
    "pre-commit>=3.7.0",
]

# ---------------------------------------------------------------------------
# Build system — tells uv/pip how to build this project as a package.
# You do not need to change this.
# ---------------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Hatchling build config — tells it which packages to include.
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["backend"]

# ---------------------------------------------------------------------------
# Ruff — Python linter and formatter
#
# What is Ruff?
# Ruff replaces three separate tools in one:
#   - flake8 (style and error checking)
#   - black (code formatting)
#   - isort (import sorting)
# It is written in Rust and runs ~100x faster than those tools combined.
#
# Rule sets enabled:
#   E  — pycodestyle errors (spacing, indentation, line length)
#   F  — pyflakes (undefined names, unused imports)
#   I  — isort (import order)
#   N  — pep8-naming (variable/function/class naming conventions)
#   UP — pyupgrade (modernise Python syntax for your target version)
#   B  — flake8-bugbear (likely bugs and design problems)
#   SIM — flake8-simplify (suggests simpler code where possible)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long — handled by formatter, not linter
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

# ---------------------------------------------------------------------------
# Pyright — static type checker
#
# What is type checking?
# Python lets you add type annotations like `def greet(name: str) -> str`.
# Pyright reads these and checks that functions are called with the right
# types — catching whole classes of bugs (passing None where a string is
# expected, calling a method that does not exist) before you even run the code.
# Tests can only catch bugs in paths you thought to test; type checking covers
# every call site automatically.
#
# "basic" mode: checks annotated code but does not demand that everything
# be annotated. Good for a new codebase where you add annotations gradually.
# ---------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

# ---------------------------------------------------------------------------
# pytest — test framework configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
addopts = [
    "--tb=short",             # shorter tracebacks
    "--strict-markers",       # fail if unknown markers are used
]

# Coverage configuration (used when running: uv run pytest --cov=backend)
[tool.coverage.run]
source = ["backend"]
omit = [
    "backend/tests/*",
    "**/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
